practice/labs/ch17-capstone/ownsolutions/mall-entrance-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mall-entrance
  name: mall-entrance
  namespace: mall-shops
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: shoes-boutique
  type: ClusterIP
status:
  loadBalancer: {}
