practice/labs/ch17-capstone/ownsolutions/grand-entrance.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grand-entrance
  namespace: mall-shops
spec:
  rules:
  - host: "mall.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mall-entrance
            port:
              number: 80
