practice/labs/ch17-capstone/ownsolutions/np-secure-shops.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: secure-shops
  namespace: mall-shops
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: mall-system
    ports:
    - protocol: TCP
      port: 80
